--- a/24CV_AppWeb/Views/Shared/_Layout.cshtml
+++ b/24CV_AppWeb/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Formularios" asp-action="Index">Formulario</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Formularios" asp-action="Contacto">FormularioContacto</a>
+                        </li>
                     </ul>
                 </div>
             </div>
